--- a/episode01.html
+++ b/episode01.html
@@ -150,14 +150,14 @@
         <h3>海邊的賊</h3>
       </div>
     </a>
-    <a href="episode03.html" class="p2-all p2-episode03 comingsoon">
+    <a href="episode03.html" class="p2-all p2-episode03">
       <div class="p2-episode-bg"></div>
       <div class="p2-episode-text">
         <span>第三部</span>
         <h3>7／1</h3>
       </div>
     </a>
-    <a href="episode04.html" class="p2-all p2-episode04 comingsoon">
+    <a href="episode04.html" class="p2-all p2-episode04">
       <div class="p2-episode-bg"></div>
       <div class="p2-episode-text">
         <span>第四部</span>
@@ -322,6 +322,7 @@
   </footer>
 </body>
 <script src="./assets/js/jquery-2.1.4.min.js"></script>
+<script src="./assets/js/update.js"></script>
 <script src="./assets/js/index.js"></script>
 <script src="./assets/js/scrollreveal/scrollreveal.min.js"></script>
 <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.1.4/scrollreveal.min.js"></script>
