--- a/episode04.html
+++ b/episode04.html
@@ -21,7 +21,7 @@
   <link href="./assets/css/main/page3.css" rel="stylesheet">
   <link href="./assets/css/main/page4.css" rel="stylesheet">
   <link href="./assets/css/main/page5.css" rel="stylesheet">
-  <link href="./assets/css/main/episode/episode01.css" rel="stylesheet">
+  <link href="./assets/css/main/episode/episode04.css" rel="stylesheet">
   <link href="./assets/css/unslider.css" rel="stylesheet">
   <link href="./assets/css/unslider-dots.css" rel="stylesheet">
 </head>
@@ -114,17 +114,19 @@
     <div class="img-bg-black"></div>
     <div class="content">
       <div class="p1-title">
-        <h2>一個人的</h2>
-        <h2>生日快樂</h2>
+        <h2 class="reveal">一個人的</h2>
+        <h2 class="reveal">生日快樂</h2>
       </div>
       <div class="page-video-play">
           <div>PLAY<br>VIDEO</div>
           <div><img src="./assets/img/main/icon-arrow-right.svg" alt=""></div>
       </div>
       <p>
-        在那些獨自回家的夜晚，
-        <br> Gogoro 會在停車後將頭燈延遲關閉，
-        <br> 用燈光護送你走到家門。
+        <span class="reveal">
+          在那些獨自回家的夜晚，
+          <br> Gogoro 會在停車後將頭燈延遲關閉，
+          <br> 用燈光護送你走到家門。  
+        </span>
       </p>
     </div>
     <a href="">
@@ -148,14 +150,14 @@
         <h3>海邊的賊</h3>
       </div>
     </a>
-    <a href="episode03.html" class="p2-all p2-episode03 comingsoon">
+    <a href="episode03.html" class="p2-all p2-episode03">
       <div class="p2-episode-bg"></div>
       <div class="p2-episode-text">
         <span>第三部</span>
         <h3>7／1</h3>
       </div>
     </a>
-    <a href="episode04.html" class="p2-all p2-episode04 comingsoon">
+    <a href="episode04.html" class="p2-all p2-episode04">
       <div class="p2-episode-bg"></div>
       <div class="p2-episode-text">
         <span>第四部</span>
@@ -166,13 +168,13 @@
   <div class="slider">
     <ul class="page page3">
       <li class="p3-slider p3-slider1">
-        <h3>生日前一天他提議分手，也好<br>一個人過生日，不是孤獨，是獨立。</h3>
+        <h3 class="reveal-400">生日前一天他提議分手，也好，一個人過生日，不是孤獨，是獨立。</h3>
       </li>
       <li class="p3-slider p3-slider2">
-        <h3>B.生日前一天他提議分手，也好<br>一個人過生日，不是孤獨，是獨立。</h3>
+        <h3>B.生日前一天他提議分手，也好，一個人過生日，不是孤獨，是獨立。</h3>
       </li>
       <li class="p3-slider p3-slider3">
-        <h3>C.生日前一天他提議分手，也好<br>一個人過生日，不是孤獨，是獨立。</h3>
+        <h3>C.生日前一天他提議分手，也好，一個人過生日，不是孤獨，是獨立。</h3>
         <div class="calltoaction">
           預約試乘
         </div>
@@ -181,24 +183,24 @@
   </div>
   <div class="page page4">
     <div class="content">
-      <h3>Gogoro 小功能</h3>
-      <h2>繼續照亮你回家的路</h2>
-      <div class="p4-video">
+      <h3 class="reveal-500">Gogoro 小功能</h3>
+      <h2 class="reveal-500">繼續照亮你回家的路</h2>
+      <div class="p4-video reveal-500">
         <img src="./assets/img/main/episode01/page4-video.png" alt="">
         <div class="page-video-play bot-v">
             <div>PLAY<br>VIDEO</div>
             <div><img src="./assets/img/main/icon-arrow-right.svg" alt=""></div>
         </div>
       </div>
-      <h3>在那些獨自回家的夜晚，Gogoro 會在停車後將頭燈延遲關閉，用燈光護送你走到家門。</h3>
+      <h3 class="reveal-500">在那些獨自回家的夜晚，Gogoro 會在停車後將頭燈延遲關閉，用燈光護送你走到家門。</h3>
     </div>
   </div>
   <div class="page page5">
     <div class="content">
-      <img src="./assets/img/main/page5-mark.png" alt="">
-      <h1>Gogoro 試騎活動</h1>
-      <h2>現在參加試騎，即送你消暑冰棒！還有機會參加抽獎，獲得女主角戴的限量安全帽！</h2>
-      <div class="calltoaction">
+      <img class="reveal-450" rc="./assets/img/main/page5-mark.png" alt="">
+      <h1 class="reveal-450">Gogoro 試騎活動</h1>
+      <h2 class="reveal-450">現在參加試騎，即送你消暑冰棒！還有機會參加抽獎，獲得女主角戴的限量安全帽！</h2>
+      <div class="calltoaction reveal-450">
         預約試乘
       </div>
     </div>
@@ -320,7 +322,9 @@
   </footer>
 </body>
 <script src="./assets/js/jquery-2.1.4.min.js"></script>
+<script src="./assets/js/update.js"></script>
 <script src="./assets/js/index.js"></script>
+<script src="./assets/js/scrollreveal/scrollreveal.min.js"></script>
 <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.1.4/scrollreveal.min.js"></script>
 <script src="./assets/js/layout.js"></script>
 <script src="./assets/js/unslider.js"></script>
