--- a/episode01.html
+++ b/episode01.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>Gogoro 預約試騎</title>
+  <title>Gogoro 預約試騎，一個人生日快樂</title>
   <meta content="gogoro" name="keywords">
-  <meta content="在那些獨自回家的夜晚，Gogoro 會在停車後將頭燈延遲關閉，用燈光護送你走到家門。" name="description">
+  <meta content="生日前一天，他提議分手，也好，一個人過生日，不是孤獨，是獨立。" name="description">
   <meta content="Gogoro 預約試騎" property="og:title">
   <meta content="Gogoro 預約試騎" property="og:site_name">
   <meta content="./assets/img/main/FacebookShare.jpg" property="og:image">
-  <meta content="在那些獨自回家的夜晚，Gogoro 會在停車後將頭燈延遲關閉，用燈光護送你走到家門。" property="og:description">
+  <meta content="生日前一天，他提議分手，也好，一個人過生日，不是孤獨，是獨立。" property="og:description">
   <link href="http://www.gogoro.com/favicon.ico" rel="shortcut icon">
   <link rel="stylesheet" href="./assets/css/normalize.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -105,10 +105,13 @@
     </div>
     <div class="youtube-box-main">
       <div class="youtube-box-main-169">
-        <iframe  src="https://www.youtube.com/embed/hfPMJwMd6I8" frameborder="0" allowfullscreen></iframe>  
+        <iframe  src="https://www.youtube.com/embed/hfPMJwMd6I8" frameborder="0" allowfullscreen></iframe>
         <iframe class="main-v" src="https://www.youtube.com/embed/2DG8h8fs8Jw" frameborder="0" allowfullscreen></iframe>
       </div> 
     </div> 
+    <div class="youtube-box-fbshare">
+        立即分享此影片
+    </div>
   </div>
   <div class="page page1">
     <div class="img-bg-black"></div>
@@ -123,9 +126,8 @@
       </div>
       <p>
         <span class="reveal">
-          在那些獨自回家的夜晚，
-          <br> Gogoro 會在停車後將頭燈延遲關閉，
-          <br> 用燈光護送你走到家門。  
+          生日前一天，他提議分手，也好，<br>
+          一個人過生日，不是孤獨，是獨立。  
         </span>
       </p>
     </div>
@@ -168,15 +170,15 @@
   <div class="slider">
     <ul class="page page3">
       <li class="p3-slider p3-slider1">
-        <h3 class="reveal-400">生日前一天他提議分手，也好，一個人過生日，不是孤獨，是獨立。</h3>
+        <h3 class="reveal-400">生日前一天他提議分手，也好，<br>一個人過生日，不是孤獨，是獨立。</h3>
       </li>
       <li class="p3-slider p3-slider2">
-        <h3>B.生日前一天他提議分手，也好，一個人過生日，不是孤獨，是獨立。</h3>
+        <h3>B.生日前一天他提議分手，也好，<br>一個人過生日，不是孤獨，是獨立。</h3>
       </li>
       <li class="p3-slider p3-slider3">
-        <h3>C.生日前一天他提議分手，也好，一個人過生日，不是孤獨，是獨立。</h3>
+        <h3>C.生日前一天他提議分手，也好，<br>一個人過生日，不是孤獨，是獨立。</h3>
         <div class="calltoaction">
-          預約試乘
+          預約試騎
         </div>
       </li>
     </ul>
@@ -192,16 +194,22 @@
             <div><img src="./assets/img/main/icon-arrow-right.svg" alt=""></div>
         </div>
       </div>
-      <h3 class="reveal-500">在那些獨自回家的夜晚，Gogoro 會在停車後將頭燈延遲關閉，用燈光護送你走到家門。</h3>
+      <h3 class="reveal-500">在那些獨自回家的夜晚， Gogoro 會在停車後將頭燈延遲關閉，用燈光護送你走到家門。</h3>
+      <a class="p4-more">瞭解更多</a>
     </div>
   </div>
   <div class="page page5">
+    <div class="img-bg-black"></div>
     <div class="content">
-      <img class="reveal-450" rc="./assets/img/main/page5-mark.png" alt="">
-      <h1 class="reveal-450">Gogoro 試騎活動</h1>
-      <h2 class="reveal-450">現在參加試騎，即送你消暑冰棒！還有機會參加抽獎，獲得女主角戴的限量安全帽！</h2>
+      <img class="reveal-450" src="./assets/img/main/page5-mark.png" alt="">
+      <h1 class="reveal-450">100次聽說，<br>不如1次親身體驗</h1>
+      <h2 class="reveal-450">
+        炎炎夏日享受一趟來電輕旅行，感受沒有震動、沒有廢氣的新體驗!<br>
+        6/15 - 7/15之間，只要來店試騎，就送你冰棒清涼一下。<br>
+        還有機會抽中女主角所戴的限量漸層安全帽喔!
+      </h2>
       <div class="calltoaction reveal-450">
-        預約試乘
+        預約試騎
       </div>
     </div>
   </div>
