add facebook share

--- a/episode02.html
+++ b/episode02.html
@@ -107,8 +107,8 @@
       <div class="youtube-box-main-169">
         <iframe  src="https://www.youtube.com/embed/hfPMJwMd6I8" frameborder="0" allowfullscreen></iframe>
         <iframe class="main-v" src="https://www.youtube.com/embed/2DG8h8fs8Jw" frameborder="0" allowfullscreen></iframe>
-      </div> 
-    </div> 
+      </div>
+    </div>
     <div class="youtube-box-fbshare">
         立即分享此影片
     </div>
@@ -126,11 +126,11 @@
       <p>
         <span class="reveal">
           不用擔心，<br>
-          該屬於妳的誰都偷不走。 
+          該屬於妳的誰都偷不走。
         </span>
       </p>
     </div>
-    <a href="">
+    <a href="http://www.facebook.com/share.php?u=<url>" onclick="return fbs_click()" target="_blank">
       <div class="p1-facebook">
         <i class="fa fa-facebook"></i>
       </div>
