--- a/episode01.html
+++ b/episode01.html
@@ -107,8 +107,8 @@
       <div class="youtube-box-main-169">
         <iframe  src="https://www.youtube.com/embed/hfPMJwMd6I8" frameborder="0" allowfullscreen></iframe>
         <iframe class="main-v" src="https://www.youtube.com/embed/2DG8h8fs8Jw" frameborder="0" allowfullscreen></iframe>
-      </div> 
-    </div> 
+      </div>
+    </div>
     <div class="youtube-box-fbshare">
         立即分享此影片
     </div>
@@ -127,11 +127,11 @@
       <p>
         <span class="reveal">
           生日前一天，他提議分手，也好，<br>
-          一個人過生日，不是孤獨，是獨立。  
+          一個人過生日，不是孤獨，是獨立。
         </span>
       </p>
     </div>
-    <a href="">
+     <a href="http://www.facebook.com/share.php?u=<url>" onclick="return fbs_click()" target="_blank">
       <div class="p1-facebook">
         <i class="fa fa-facebook"></i>
       </div>
